--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://aqadir64.github.io",
+  "homepage": "https://MuFaraz.github.io",
   "name": "dev",
   "version": "0.1.0",
   "private": true,
